src/test/deca/syntax/parser/valid/test/pars_val_while.deca
// Description:
//    Programme minimaliste testant l'arbre d'affectation de l'instruction while.
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023


{
    int x = 3;
    while (x < 5 ){
        println(x);
        x +=1;
    }
}