src/test/deca/syntax/parser/invalid/pars_inv_if_oubli_accolade.deca
// Description:
//    tests de programme incorrect syntaxiquement pour le if
//
// Resultats:
//    Ligne 12 : Erreur (oubli })
//    
//
// Historique:
//    cree le 04/01/2023

{
    x = 0;
    if (x < 5){
        println("Hello");
        x += 1;
    
}
